[gd_scene load_steps=3 format=3 uid="uid://crtdkcfkvb8sy"]

[ext_resource type="Theme" uid="uid://dks16qglyxjf6" path="res://assets/default_ui_theme.tres" id="1_bb0cp"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_src57"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("1_src57")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -150.0
offset_right = 90.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.00784314, 0.0313726, 0.623529)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bb0cp")
text = "Continue"

[node name="ResetButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bb0cp")
text = "Reset"

[node name="ControlsButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bb0cp")
text = "Controls"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bb0cp")
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
